app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udacity-capstone-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udacity-capstone-flask
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: udacity-capstone-flask
    spec:
      containers:
        - name: udacity-capstone
          imagePullPolicy: IfNotPresent
          image: dipenc/udacity-capstone:1.0
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          ports:
            - containerPort: 5000
